<resources>
    <string name="app_name">NMedia</string>
    <string name="nmedia">NMedia!</string>
    <string name="description_post_author_avatar">Post author avatar</string>
    <string name="description_post_menu">Post menu</string>
    <string name="description_post_likes">Like</string>
    <string name="description_post_shares">Amount of shares</string>
    <string name="description_post_views">Amount of views</string>
    <string name="remove">Remove</string>
    <string name="post_text">Post text</string>
    <string name="save_post">Save post</string>
    <string name="edit">Edit</string>
    <string name="close_edit">Close edit</string>
    <string name="editing_post">Editing post</string>
    <string name="chooser_share_post">Share</string>
    <string name="error_empty_content">Content can\'t be empty</string>
    <string name="add_post">Add post</string>
    <string name="attached_content">Attached</string>
    <string name="play_video">Play video</string>
    <string name="google_play_unavailable">Google play is unavailable</string>
    <string name="channel_remote_name">Channel name</string>
    <string name="channel_remote_description">Channel description</string>
    <string name="notification_user_liked">%1$s liked post %2$s</string>
    <string name="notification_new_post">%1$s made new post:</string>
    <string name="error">Some error happened</string>
    <string name="specific_load_error">Error loading\nError code:%1$s.</string>
    <string name="specific_edit_error">Error:%1$s.\nTry again</string>
    <string name="specific_posting_error">Error code:%1$s\nTry sending the message again</string>
    <string name="retry">Retry loading</string>
    <string name="posts_empty">No posts exists</string>
    <string name="not_on_server_yet">This post not on server yet</string>
    <string name="newer_posts">There are %1$s new posts</string>
    <string name="save">Save</string>
    <string name="select_photo">Select photo</string>
    <string name="take_photo">Take photo</string>
    <string name="picked_photo">Picked photo</string>
    <string name="removePhoto">Remove</string>
    <string name="sing_in">Sing In</string>
    <string name="sing_up">Sing Up</string>
    <string name="log_out">Log out</string>
    <string name="login">LOGIN</string>
    <string name="password">PASSWORD</string>
    <string name="login_error">"Login Error: :%1$s"</string>
    <string name="login_wrong">"Wrong login or password"</string>
    <string name="you_are_not_authorized">You are not authorized. Do you want to log in?</string>
    <string name="go_back">Go back</string>
    <string name="username">USERNAME</string>
    <string name="repeat_password">REPEAT PASSWORD</string>
    <string name="notification_new">You received a notification: %1$s</string>
</resources>