<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/wholePost"
    >

    <ImageView
        android:id="@+id/avatar"
        android:layout_width="@dimen/avatarSize"
        android:layout_height="@dimen/avatarSize"
        android:layout_margin="@dimen/marginDefault"
        android:contentDescription="@string/description_post_author_avatar"
        android:src="@drawable/ic_launcher_foreground"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@sample/posts_avatars" />

    <TextView
        android:id="@+id/author"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/marginDefault"
        android:ellipsize="end"
        android:maxLines="1"
        app:layout_constraintBottom_toTopOf="@id/published"
        app:layout_constraintEnd_toStartOf="@id/menu"
        app:layout_constraintStart_toEndOf="@id/avatar"
        app:layout_constraintTop_toTopOf="@id/avatar"
        tools:text="@sample/posts.json/data/author" />

    <TextView
        android:id="@+id/published"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/marginDefault"
        app:layout_constraintBottom_toBottomOf="@id/avatar"
        app:layout_constraintStart_toEndOf="@id/avatar"
        app:layout_constraintTop_toBottomOf="@id/author"
        tools:text="@sample/posts.json/data/published" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/menu"
        android:layout_width="@dimen/pictureSize"
        android:layout_height="@dimen/pictureSize"
        android:layout_marginTop="@dimen/marginDefault"
        android:contentDescription="@string/description_post_menu"
        app:icon="@drawable/ic_baseline_more_vert_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        style="@style/Widget.AppTheme.GrayButtons"/>

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrierTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="avatar,published,menu" />

    <TextView
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autoLink="web"
        android:padding="@dimen/marginDefault"
        app:layout_constraintTop_toTopOf="@id/barrierTop"
        tools:text="@sample/posts.json/data/content" />

    <ImageButton
        android:id="@+id/attachmentPicture"
        android:layout_width="match_parent"
        android:layout_height="@dimen/video_height"
        android:src="@drawable/ic_baseline_video"
        app:layout_constraintTop_toBottomOf="@id/content"
        android:contentDescription="@string/attached_content"
        android:visibility="visible"
        />

    <ImageView
        android:id="@+id/playButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_baseline_play_circle_80"
        android:contentDescription="@string/play_video"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@id/attachmentPicture"
        app:layout_constraintEnd_toEndOf="@id/attachmentPicture"
        app:layout_constraintStart_toStartOf="@id/attachmentPicture"
        app:layout_constraintTop_toTopOf="@id/attachmentPicture"
        />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrierBottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="content,attachmentPicture" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/like"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/pictureSize"
        android:layout_marginStart="@dimen/marginDefault"
        android:contentDescription="@string/description_post_likes"
        android:checkable="true"
        app:icon="@drawable/ic_like_24dp"
        app:layout_constraintEnd_toStartOf="@id/share"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/barrierBottom"
        tools:text="5"
        style="@style/Widget.AppTheme.LikeCheckBox"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/share"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/pictureSize"
        android:layout_marginStart="@dimen/marginDefault"
        android:contentDescription="@string/description_post_shares"
        app:icon="@drawable/ic_baseline_share_24"
        app:layout_constraintStart_toEndOf="@id/like"
        app:layout_constraintTop_toBottomOf="@id/barrierBottom"
        tools:text = "5"
        style="@style/Widget.AppTheme.GrayButtons"
        />

    <TextView
        android:id="@+id/viewsText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/marginDefault"
        app:layout_constraintBottom_toBottomOf="@id/viewsIcon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/viewsIcon"
        tools:text="@sample/posts.json/data/views" />

    <ImageButton
        android:id="@+id/viewsIcon"
        android:layout_width="@dimen/pictureSize"
        android:layout_height="@dimen/pictureSize"
        android:background="@android:color/transparent"
        android:contentDescription="@string/description_post_views"
        android:src="@drawable/ic_baseline_eye_24"
        app:layout_constraintEnd_toStartOf="@id/viewsText"
        app:layout_constraintTop_toBottomOf="@id/barrierBottom" />

    <ImageView
        android:id="@+id/notOnServer"
        android:layout_width="@dimen/pictureSize"
        android:layout_height="@dimen/pictureSize"
        android:contentDescription="@string/not_on_server_yet"
        android:src="@drawable/ic_baseline_error_outline_48"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/barrierBottom"
        />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/bottomGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="visible"
        app:constraint_referenced_ids="viewsIcon, viewsText, like, share"
        />

</androidx.constraintlayout.widget.ConstraintLayout>