<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.NewPostFragment">


    <LinearLayout
        android:id="@+id/buttonPanel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/pickPhoto"
            style="@style/Widget.AppTheme.GrayButtons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/select_photo"
            android:padding="@dimen/marginDefault"
            app:icon="@drawable/ic_baseline_picture_24" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/takePhoto"
            style="@style/Widget.AppTheme.GrayButtons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/take_photo"
            android:padding="@dimen/marginDefault"
            app:icon="@drawable/ic_baseline_camera_24" />

    </LinearLayout>

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/divider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:gravity="start|top"
                android:inputType="textMultiLine" />

            <FrameLayout
                android:id="@+id/photoContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/photo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:contentDescription="@string/picked_photo" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/removePhoto"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal|bottom"
                    android:text="@string/removePhoto" />
            </FrameLayout>
        </LinearLayout>
    </ScrollView>

    <View
        android:id="@+id/divider"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginStart="@dimen/marginDefault"
        android:layout_marginEnd="@dimen/marginDefault"
        android:background="@color/cardview_dark_background"
        app:layout_constraintBottom_toTopOf="@id/buttonPanel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>