<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_200"
    tools:context=".activity.SignInFragment">

    <EditText
        android:id="@+id/loginInput"
        android:layout_width="@dimen/text_input"
        android:layout_height="@dimen/descriptor_size"
        android:layout_margin="@dimen/marginDefault"
        android:autofillHints="username"
        android:background="@color/white"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@id/passwordText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/loginText"
        />

    <EditText
        android:id="@+id/passwordInput"
        android:layout_width="@dimen/text_input"
        android:layout_height="@dimen/descriptor_size"
        android:layout_margin="@dimen/marginDefault"
        android:autofillHints="password"
        android:background="@color/white"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@id/signInButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/passwordText"/>

    <TextView
        android:id="@+id/passwordText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/marginDefault"
        android:text="@string/password"
        app:layout_constraintBottom_toTopOf="@id/passwordInput"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/loginInput" />


    <TextView
        android:id="@+id/loginText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/marginDefault"
        android:text="@string/login"
        app:layout_constraintBottom_toTopOf="@id/loginInput"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/signInButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/marginDefault"
        android:text="@string/sing_in"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/passwordInput"/>

</androidx.constraintlayout.widget.ConstraintLayout>